--- a/battle2-dodge.html
+++ b/battle2-dodge.html
@@ -6,6 +6,28 @@
   <style>
     canvas { border: 2px solid black; }
   </style>
+<style>
+  body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-family: Arial, sans-serif;
+    background-color: #f0f0f0;
+  }
+  canvas {
+    border: 2px solid black;
+    margin-top: 20px;
+  }
+  #score {
+    font-size: 20px;
+    margin-top: 10px;
+  }
+  button {
+    margin-top: 10px;
+    padding: 5px 10px;
+    font-size: 16px;
+  }
+</style>
 </head>
 <body>
   <h2>MENU---</h2>
@@ -14,5 +36,6 @@
   <canvas id="game" width="400" height="400"></canvas>
   <script src="modo2-funcoes.js"></script>
   
+  <h1>Pontuação: <span id="score">0</span></h1>  
 </body>
 </html>
