--- a/main.html
+++ b/main.html
@@ -2,49 +2,27 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Snake - Modo 1</title>
-  <style>
-    body {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      font-family: Arial, sans-serif;
-      background-color: white;
-      transition: background-color 0.3s linear;
-    }
-    canvas {
-      border: 2px solid black;
-      margin-top: 20px;
-    }
-    #score, #level {
-      font-size: 20px;
-      margin-top: 10px;
-      transition: color 0.3s linear;
-    }
-    #exp-container {
-      width: 200px;
-      height: 20px;
-      border: 2px solid #000;
-      margin-top: 5px;
-      background-color: #ddd;
-    }
-    #exp-bar {
-      height: 100%;
-      width: 0%;
-      background-color: green;
-      transition: width 0.3s;
-    }
-  </style>
+  <title>Snake - Modo 1 (Corrigido)</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h2>MENU---</h2>
-  <a href="battle2-dodge.html">Modo 2</a>
+  <a href="battle2-dodge.html" class="menu-link">Modo 2</a>
   <h1>🐍 Snake - Modo Normal</h1>
-  <canvas id="game" width="400" height="400"></canvas>
+  
+  <div class="game-container">
+    <canvas id="game" width="400" height="400"></canvas>
+  </div>
 
-  <h1 id="score">Pontuação: 0</h1>
-  <h1 id="level">Nível: 1</h1>
+  <div id="score">Pontuação: 0</div>
+  <div id="level">Nível: 1</div>
   <div id="exp-container"><div id="exp-bar"></div></div>
+
+  <div class="instructions">
+    <p>Use as setas do teclado para mover a cobra</p>
+    <p>Pressione R para reiniciar o jogo</p>
+    <p>O fundo escurece conforme sua pontuação aumenta</p>
+  </div>
 
   <script src="script.js"></script>
 </body>
